// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`listing for folder-1 1`] = `
<div
  class="listing"
>
  <div
    class="resourceItem"
    title="folder-1"
  >
    <ufo-rocks_resource-icon
      classname="resourceItemNoShrink"
      ext=""
      size="s"
      type="dir_back"
    />
    <span
      class="resourceItemName"
    >
      folder-1
    </span>
  </div>
  <div
    class="resourceItem"
    title="nested-folder-1"
  >
    <ufo-rocks_resource-icon
      classname="resourceItemNoShrink"
      ext=""
      size="s"
      type="dir"
    />
    <span
      class="resourceItemName"
    >
      nested-folder-1
    </span>
  </div>
  <div
    class="resourceItem"
    title="nested-folder-2 (empty)"
  >
    <ufo-rocks_resource-icon
      classname="resourceItemNoShrink"
      ext=""
      size="s"
      type="dir"
    />
    <span
      class="resourceItemName"
    >
      nested-folder-2 (empty)
    </span>
  </div>
  <div
    class="resourceItem"
    title="file-in-folder-1 (encrypted).txt"
  >
    <ufo-rocks_resource-icon
      classname="resourceItemNoShrink"
      ext="txt"
      size="s"
      type="file"
    />
    <span
      class="resourceItemName"
    >
      file-in-folder-1 (encrypted).
    </span>
    <span
      class="resourceItemNoShrink"
    >
      txt
    </span>
  </div>
</div>
`;

exports[`listing for folder-1 and incorrect selected file (renders as no selected) 1`] = `
<div
  class="listing"
>
  <div
    class="resourceItem"
    title="folder-1"
  >
    <ufo-rocks_resource-icon
      classname="resourceItemNoShrink"
      ext=""
      size="s"
      type="dir_back"
    />
    <span
      class="resourceItemName"
    >
      folder-1
    </span>
  </div>
  <div
    class="resourceItem"
    title="nested-folder-1"
  >
    <ufo-rocks_resource-icon
      classname="resourceItemNoShrink"
      ext=""
      size="s"
      type="dir"
    />
    <span
      class="resourceItemName"
    >
      nested-folder-1
    </span>
  </div>
  <div
    class="resourceItem"
    title="nested-folder-2 (empty)"
  >
    <ufo-rocks_resource-icon
      classname="resourceItemNoShrink"
      ext=""
      size="s"
      type="dir"
    />
    <span
      class="resourceItemName"
    >
      nested-folder-2 (empty)
    </span>
  </div>
  <div
    class="resourceItem"
    title="file-in-folder-1 (encrypted).txt"
  >
    <ufo-rocks_resource-icon
      classname="resourceItemNoShrink"
      ext="txt"
      size="s"
      type="file"
    />
    <span
      class="resourceItemName"
    >
      file-in-folder-1 (encrypted).
    </span>
    <span
      class="resourceItemNoShrink"
    >
      txt
    </span>
  </div>
</div>
`;

exports[`listing for iOS 1`] = `
<div
  class="listing"
>
  <div
    class="resourceItem"
    title="folder-1"
  >
    <ufo-rocks_resource-icon
      classname="resourceItemNoShrink"
      ext=""
      size="s"
      type="dir"
    />
    <span
      class="resourceItemName"
    >
      folder-1
    </span>
  </div>
  <div
    class="resourceItem"
    title="folder-2 (empty)"
  >
    <ufo-rocks_resource-icon
      classname="resourceItemNoShrink"
      ext=""
      size="s"
      type="dir"
    />
    <span
      class="resourceItemName"
    >
      folder-2 (empty)
    </span>
  </div>
  <a
    class="resourceItem"
    href="/restart/?*=some-token&name=file-in-1.doc&archive-path=%2F%2Ffile-in-1.doc&lang=ru"
  >
    <ufo-rocks_resource-icon
      classname="resourceItemNoShrink"
      ext="doc"
      size="s"
      type="file"
    />
    <span
      class="resourceItemName"
    >
      file-in-1.
    </span>
    <span
      class="resourceItemNoShrink"
    >
      doc
    </span>
  </a>
  <div
    class="resourceItem"
    title="file-with-long-extension.extension"
  >
    <ufo-rocks_resource-icon
      classname="resourceItemNoShrink"
      ext=""
      size="s"
      type="file"
    />
    <span
      class="resourceItemName"
    >
      file-with-long-extension.extension
    </span>
  </div>
  <div
    class="resourceItem"
    title="file-with-no-extension"
  >
    <ufo-rocks_resource-icon
      classname="resourceItemNoShrink"
      ext=""
      size="s"
      type="file"
    />
    <span
      class="resourceItemName"
    >
      file-with-no-extension
    </span>
  </div>
</div>
`;

exports[`listing for nested empty folder 1`] = `
<div
  class="listing"
>
  <div
    class="resourceItem"
    title="nested-folder-2 (empty)"
  >
    <ufo-rocks_resource-icon
      classname="resourceItemNoShrink"
      ext=""
      size="s"
      type="dir_back"
    />
    <span
      class="resourceItemName"
    >
      nested-folder-2 (empty)
    </span>
  </div>
  <div
    class="listingItem"
  >
    <span>
      Пустая папка
    </span>
  </div>
</div>
`;

exports[`listing simple test 1`] = `
<div
  class="listing"
>
  <div
    class="resourceItem"
    title="folder-1"
  >
    <ufo-rocks_resource-icon
      classname="resourceItemNoShrink"
      ext=""
      size="s"
      type="dir"
    />
    <span
      class="resourceItemName"
    >
      folder-1
    </span>
  </div>
  <div
    class="resourceItem"
    title="folder-2 (empty)"
  >
    <ufo-rocks_resource-icon
      classname="resourceItemNoShrink"
      ext=""
      size="s"
      type="dir"
    />
    <span
      class="resourceItemName"
    >
      folder-2 (empty)
    </span>
  </div>
  <div
    class="resourceItem"
    title="file-in-1.doc"
  >
    <ufo-rocks_resource-icon
      classname="resourceItemNoShrink"
      ext="doc"
      size="s"
      type="file"
    />
    <span
      class="resourceItemName"
    >
      file-in-1.
    </span>
    <span
      class="resourceItemNoShrink"
    >
      doc
    </span>
  </div>
  <div
    class="resourceItem"
    title="file-with-long-extension.extension"
  >
    <ufo-rocks_resource-icon
      classname="resourceItemNoShrink"
      ext=""
      size="s"
      type="file"
    />
    <span
      class="resourceItemName"
    >
      file-with-long-extension.extension
    </span>
  </div>
  <div
    class="resourceItem"
    title="file-with-no-extension"
  >
    <ufo-rocks_resource-icon
      classname="resourceItemNoShrink"
      ext=""
      size="s"
      type="file"
    />
    <span
      class="resourceItemName"
    >
      file-with-no-extension
    </span>
  </div>
</div>
`;

exports[`listing with incorrect path 1`] = `
<div
  class="listing"
>
  <div
    class="resourceItem"
    title="folder-2 (empty)"
  >
    <ufo-rocks_resource-icon
      classname="resourceItemNoShrink"
      ext=""
      size="s"
      type="dir_back"
    />
    <span
      class="resourceItemName"
    >
      folder-2 (empty)
    </span>
  </div>
  <div
    class="listingItem"
  >
    <span>
      Пустая папка
    </span>
  </div>
</div>
`;

exports[`listing with selected encrypted file (no action bar for encrypted) 1`] = `
<div
  class="listing"
>
  <div
    class="resourceItem"
    title="folder-1"
  >
    <ufo-rocks_resource-icon
      classname="resourceItemNoShrink"
      ext=""
      size="s"
      type="dir_back"
    />
    <span
      class="resourceItemName"
    >
      folder-1
    </span>
  </div>
  <div
    class="resourceItem"
    title="nested-folder-1"
  >
    <ufo-rocks_resource-icon
      classname="resourceItemNoShrink"
      ext=""
      size="s"
      type="dir"
    />
    <span
      class="resourceItemName"
    >
      nested-folder-1
    </span>
  </div>
  <div
    class="resourceItem"
    title="nested-folder-2 (empty)"
  >
    <ufo-rocks_resource-icon
      classname="resourceItemNoShrink"
      ext=""
      size="s"
      type="dir"
    />
    <span
      class="resourceItemName"
    >
      nested-folder-2 (empty)
    </span>
  </div>
  <div
    class="resourceItem selectedItem"
    title="file-in-folder-1 (encrypted).txt"
  >
    <div
      class="selectedMarker"
    />
    <ufo-rocks_resource-icon
      classname="resourceItemNoShrink"
      ext="txt"
      size="s"
      type="file"
    />
    <span
      class="resourceItemName"
    >
      file-in-folder-1 (encrypted).
    </span>
    <span
      class="resourceItemNoShrink"
    >
      txt
    </span>
  </div>
</div>
`;

exports[`listing with selected file with both actions 1`] = `
<div
  class="listing"
>
  <div
    class="resourceItem"
    title="nested-folder-1"
  >
    <ufo-rocks_resource-icon
      classname="resourceItemNoShrink"
      ext=""
      size="s"
      type="dir_back"
    />
    <span
      class="resourceItemName"
    >
      nested-folder-1
    </span>
  </div>
  <div
    class="resourceItem selectedItem"
    title="file-in-nested-folder-1.ppt"
  >
    <div
      class="selectedMarker"
    />
    <ufo-rocks_resource-icon
      classname="resourceItemNoShrink"
      ext="ppt"
      size="s"
      type="file"
    />
    <span
      class="resourceItemName"
    >
      file-in-nested-folder-1.
    </span>
    <span
      class="resourceItemNoShrink"
    >
      ppt
    </span>
    <div
      class="actionBar "
      title=""
    >
      <ufo-rocks_hover-tooltip
        classname="iconButton"
        text="Сохранить на Яндекс Диск"
      >
        <lego-components_button
          icon="className => /*#__PURE__*/_react.default.createElement(_logo.default, {
  cls: className
})"
          onclick="event => {
    event.stopPropagation();
    saveFromArchiveListing(path, name);
    metrika.countArchiveAction('save');
  }"
          size="m"
          view="clear"
        />
      </ufo-rocks_hover-tooltip>
      <ufo-rocks_hover-tooltip
        classname="iconButton"
        text="Скачать"
      >
        <lego-components_button
          icon="className => /*#__PURE__*/_react.default.createElement(_download.default, {
  iconSize: \\"m\\",
  cls: className
})"
          onclick="event => {
    event.stopPropagation();
    download(path).catch(error => metrika.countDownloadError(error, 'из листинга архива'));
    metrika.countArchiveAction('download');
  }"
          size="m"
          view="clear"
        />
      </ufo-rocks_hover-tooltip>
    </div>
  </div>
</div>
`;

exports[`listing with selected file with only download action 1`] = `
<div
  class="listing"
>
  <div
    class="resourceItem"
    title="folder-1"
  >
    <ufo-rocks_resource-icon
      classname="resourceItemNoShrink"
      ext=""
      size="s"
      type="dir"
    />
    <span
      class="resourceItemName"
    >
      folder-1
    </span>
  </div>
  <div
    class="resourceItem"
    title="folder-2 (empty)"
  >
    <ufo-rocks_resource-icon
      classname="resourceItemNoShrink"
      ext=""
      size="s"
      type="dir"
    />
    <span
      class="resourceItemName"
    >
      folder-2 (empty)
    </span>
  </div>
  <div
    class="resourceItem selectedItem"
    title="file-in-1.doc"
  >
    <div
      class="selectedMarker"
    />
    <ufo-rocks_resource-icon
      classname="resourceItemNoShrink"
      ext="doc"
      size="s"
      type="file"
    />
    <span
      class="resourceItemName"
    >
      file-in-1.
    </span>
    <span
      class="resourceItemNoShrink"
    >
      doc
    </span>
    <div
      class="actionBar "
      title=""
    >
      <ufo-rocks_hover-tooltip
        classname="iconButton"
        text="Скачать"
      >
        <lego-components_button
          icon="className => /*#__PURE__*/_react.default.createElement(_download.default, {
  iconSize: \\"m\\",
  cls: className
})"
          onclick="event => {
    event.stopPropagation();
    download(path).catch(error => metrika.countDownloadError(error, 'из листинга архива'));
    metrika.countArchiveAction('download');
  }"
          size="m"
          view="clear"
        />
      </ufo-rocks_hover-tooltip>
    </div>
  </div>
  <div
    class="resourceItem"
    title="file-with-long-extension.extension"
  >
    <ufo-rocks_resource-icon
      classname="resourceItemNoShrink"
      ext=""
      size="s"
      type="file"
    />
    <span
      class="resourceItemName"
    >
      file-with-long-extension.extension
    </span>
    <div
      class="actionBar "
      title=""
    >
      <ufo-rocks_hover-tooltip
        classname="iconButton"
        text="Скачать"
      >
        <lego-components_button
          icon="className => /*#__PURE__*/_react.default.createElement(_download.default, {
  iconSize: \\"m\\",
  cls: className
})"
          onclick="event => {
    event.stopPropagation();
    download(path).catch(error => metrika.countDownloadError(error, 'из листинга архива'));
    metrika.countArchiveAction('download');
  }"
          size="m"
          view="clear"
        />
      </ufo-rocks_hover-tooltip>
    </div>
  </div>
  <div
    class="resourceItem"
    title="file-with-no-extension"
  >
    <ufo-rocks_resource-icon
      classname="resourceItemNoShrink"
      ext=""
      size="s"
      type="file"
    />
    <span
      class="resourceItemName"
    >
      file-with-no-extension
    </span>
    <div
      class="actionBar "
      title=""
    >
      <ufo-rocks_hover-tooltip
        classname="iconButton"
        text="Скачать"
      >
        <lego-components_button
          icon="className => /*#__PURE__*/_react.default.createElement(_download.default, {
  iconSize: \\"m\\",
  cls: className
})"
          onclick="event => {
    event.stopPropagation();
    download(path).catch(error => metrika.countDownloadError(error, 'из листинга архива'));
    metrika.countArchiveAction('download');
  }"
          size="m"
          view="clear"
        />
      </ufo-rocks_hover-tooltip>
    </div>
  </div>
</div>
`;

exports[`listing with selected file with only save action 1`] = `
<div
  class="listing"
>
  <div
    class="resourceItem"
    title="folder-1"
  >
    <ufo-rocks_resource-icon
      classname="resourceItemNoShrink"
      ext=""
      size="s"
      type="dir"
    />
    <span
      class="resourceItemName"
    >
      folder-1
    </span>
  </div>
  <div
    class="resourceItem"
    title="folder-2 (empty)"
  >
    <ufo-rocks_resource-icon
      classname="resourceItemNoShrink"
      ext=""
      size="s"
      type="dir"
    />
    <span
      class="resourceItemName"
    >
      folder-2 (empty)
    </span>
  </div>
  <div
    class="resourceItem selectedItem"
    title="file-in-1.doc"
  >
    <div
      class="selectedMarker"
    />
    <ufo-rocks_resource-icon
      classname="resourceItemNoShrink"
      ext="doc"
      size="s"
      type="file"
    />
    <span
      class="resourceItemName"
    >
      file-in-1.
    </span>
    <span
      class="resourceItemNoShrink"
    >
      doc
    </span>
    <div
      class="actionBar "
      title=""
    >
      <ufo-rocks_hover-tooltip
        classname="iconButton"
        text="Сохранить на Яндекс Диск"
      >
        <lego-components_button
          icon="className => /*#__PURE__*/_react.default.createElement(_logo.default, {
  cls: className
})"
          onclick="event => {
    event.stopPropagation();
    saveFromArchiveListing(path, name);
    metrika.countArchiveAction('save');
  }"
          size="m"
          view="clear"
        />
      </ufo-rocks_hover-tooltip>
    </div>
  </div>
  <div
    class="resourceItem"
    title="file-with-long-extension.extension"
  >
    <ufo-rocks_resource-icon
      classname="resourceItemNoShrink"
      ext=""
      size="s"
      type="file"
    />
    <span
      class="resourceItemName"
    >
      file-with-long-extension.extension
    </span>
    <div
      class="actionBar "
      title=""
    >
      <ufo-rocks_hover-tooltip
        classname="iconButton"
        text="Сохранить на Яндекс Диск"
      >
        <lego-components_button
          icon="className => /*#__PURE__*/_react.default.createElement(_logo.default, {
  cls: className
})"
          onclick="event => {
    event.stopPropagation();
    saveFromArchiveListing(path, name);
    metrika.countArchiveAction('save');
  }"
          size="m"
          view="clear"
        />
      </ufo-rocks_hover-tooltip>
    </div>
  </div>
  <div
    class="resourceItem"
    title="file-with-no-extension"
  >
    <ufo-rocks_resource-icon
      classname="resourceItemNoShrink"
      ext=""
      size="s"
      type="file"
    />
    <span
      class="resourceItemName"
    >
      file-with-no-extension
    </span>
    <div
      class="actionBar "
      title=""
    >
      <ufo-rocks_hover-tooltip
        classname="iconButton"
        text="Сохранить на Яндекс Диск"
      >
        <lego-components_button
          icon="className => /*#__PURE__*/_react.default.createElement(_logo.default, {
  cls: className
})"
          onclick="event => {
    event.stopPropagation();
    saveFromArchiveListing(path, name);
    metrika.countArchiveAction('save');
  }"
          size="m"
          view="clear"
        />
      </ufo-rocks_hover-tooltip>
    </div>
  </div>
</div>
`;
